workspace_language_implementatin_patterns/llp/src/main/java/symtab/aggr/CymbolParser.java
package symtab.aggr;

// $ANTLR 3.5.2 Cymbol.g 2016-12-26 14:57:33

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class CymbolParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARG_DECL", "BLOCK", "CALL", "ELIST", 
		"EXPR", "FIELD_DECL", "ID", "INT", "LETTER", "METHOD_DECL", "SL_COMMENT", 
		"VAR_DECL", "WS", "'('", "')'", "'+'", "','", "'.'", "';'", "'='", "'float'", 
		"'int'", "'return'", "'struct'", "'void'", "'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int ARG_DECL=4;
	public static final int BLOCK=5;
	public static final int CALL=6;
	public static final int ELIST=7;
	public static final int EXPR=8;
	public static final int FIELD_DECL=9;
	public static final int ID=10;
	public static final int INT=11;
	public static final int LETTER=12;
	public static final int METHOD_DECL=13;
	public static final int SL_COMMENT=14;
	public static final int VAR_DECL=15;
	public static final int WS=16;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CymbolParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CymbolParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return CymbolParser.tokenNames; }
	@Override public String getGrammarFileName() { return "Cymbol.g"; }


	public static class compilationUnit_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "compilationUnit"
	// Cymbol.g:18:1: compilationUnit : ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+ ;
	public final CymbolParser.compilationUnit_return compilationUnit() throws RecognitionException {
		CymbolParser.compilationUnit_return retval = new CymbolParser.compilationUnit_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope structDeclaration1 =null;
		ParserRuleReturnScope methodDeclaration2 =null;
		ParserRuleReturnScope varDeclaration3 =null;


		try {
			// Cymbol.g:19:5: ( ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+ )
			// Cymbol.g:19:9: ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+
			{
			root_0 = (CommonTree)adaptor.nil();


			// Cymbol.g:19:9: ( options {backtrack=true; } : structDeclaration | methodDeclaration | varDeclaration )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=4;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==27) ) {
					alt1=1;
				}
				else if ( (LA1_0==ID||(LA1_0 >= 24 && LA1_0 <= 25)||LA1_0==28) ) {
					int LA1_3 = input.LA(2);
					if ( (LA1_3==ID) ) {
						int LA1_4 = input.LA(3);
						if ( (LA1_4==17) ) {
							alt1=2;
						}
						else if ( ((LA1_4 >= 22 && LA1_4 <= 23)) ) {
							alt1=3;
						}

					}

				}

				switch (alt1) {
				case 1 :
					// Cymbol.g:21:5: structDeclaration
					{
					pushFollow(FOLLOW_structDeclaration_in_compilationUnit136);
					structDeclaration1=structDeclaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, structDeclaration1.getTree());

					}
					break;
				case 2 :
					// Cymbol.g:21:25: methodDeclaration
					{
					pushFollow(FOLLOW_methodDeclaration_in_compilationUnit140);
					methodDeclaration2=methodDeclaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, methodDeclaration2.getTree());

					}
					break;
				case 3 :
					// Cymbol.g:21:45: varDeclaration
					{
					pushFollow(FOLLOW_varDeclaration_in_compilationUnit144);
					varDeclaration3=varDeclaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, varDeclaration3.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "compilationUnit"


	public static class structDeclaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "structDeclaration"
	// Cymbol.g:25:1: structDeclaration : 'struct' ID '{' ( structMember )+ '}' ';' -> ^( 'struct' ID ( structMember )+ ) ;
	public final CymbolParser.structDeclaration_return structDeclaration() throws RecognitionException {
		CymbolParser.structDeclaration_return retval = new CymbolParser.structDeclaration_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token string_literal4=null;
		Token ID5=null;
		Token char_literal6=null;
		Token char_literal8=null;
		Token char_literal9=null;
		ParserRuleReturnScope structMember7 =null;

		CommonTree string_literal4_tree=null;
		CommonTree ID5_tree=null;
		CommonTree char_literal6_tree=null;
		CommonTree char_literal8_tree=null;
		CommonTree char_literal9_tree=null;
		RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
		RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
		RewriteRuleSubtreeStream stream_structMember=new RewriteRuleSubtreeStream(adaptor,"rule structMember");

		try {
			// Cymbol.g:26:2: ( 'struct' ID '{' ( structMember )+ '}' ';' -> ^( 'struct' ID ( structMember )+ ) )
			// Cymbol.g:26:4: 'struct' ID '{' ( structMember )+ '}' ';'
			{
			string_literal4=(Token)match(input,27,FOLLOW_27_in_structDeclaration163); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_27.add(string_literal4);

			ID5=(Token)match(input,ID,FOLLOW_ID_in_structDeclaration165); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ID.add(ID5);

			char_literal6=(Token)match(input,29,FOLLOW_29_in_structDeclaration167); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_29.add(char_literal6);

			// Cymbol.g:26:20: ( structMember )+
			int cnt2=0;
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==ID||(LA2_0 >= 24 && LA2_0 <= 25)||(LA2_0 >= 27 && LA2_0 <= 28)) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// Cymbol.g:26:20: structMember
					{
					pushFollow(FOLLOW_structMember_in_structDeclaration169);
					structMember7=structMember();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_structMember.add(structMember7.getTree());
					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(2, input);
					throw eee;
				}
				cnt2++;
			}

			char_literal8=(Token)match(input,30,FOLLOW_30_in_structDeclaration172); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_30.add(char_literal8);

			char_literal9=(Token)match(input,22,FOLLOW_22_in_structDeclaration174); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_22.add(char_literal9);

			// AST REWRITE
			// elements: ID, 27, structMember
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 26:42: -> ^( 'struct' ID ( structMember )+ )
			{
				// Cymbol.g:26:45: ^( 'struct' ID ( structMember )+ )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot(stream_27.nextNode(), root_1);
				adaptor.addChild(root_1, stream_ID.nextNode());
				if ( !(stream_structMember.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_structMember.hasNext() ) {
					adaptor.addChild(root_1, stream_structMember.nextTree());
				}
				stream_structMember.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "structDeclaration"


	public static class structMember_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "structMember"
	// Cymbol.g:29:1: structMember : ( type ID ';' -> ^( FIELD_DECL type ID ) | structDeclaration );
	public final CymbolParser.structMember_return structMember() throws RecognitionException {
		CymbolParser.structMember_return retval = new CymbolParser.structMember_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID11=null;
		Token char_literal12=null;
		ParserRuleReturnScope type10 =null;
		ParserRuleReturnScope structDeclaration13 =null;

		CommonTree ID11_tree=null;
		CommonTree char_literal12_tree=null;
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			// Cymbol.g:30:2: ( type ID ';' -> ^( FIELD_DECL type ID ) | structDeclaration )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==ID||(LA3_0 >= 24 && LA3_0 <= 25)||LA3_0==28) ) {
				alt3=1;
			}
			else if ( (LA3_0==27) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// Cymbol.g:30:4: type ID ';'
					{
					pushFollow(FOLLOW_type_in_structMember198);
					type10=type();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_type.add(type10.getTree());
					ID11=(Token)match(input,ID,FOLLOW_ID_in_structMember200); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_ID.add(ID11);

					char_literal12=(Token)match(input,22,FOLLOW_22_in_structMember202); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_22.add(char_literal12);

					// AST REWRITE
					// elements: type, ID
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if ( state.backtracking==0 ) {
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 30:16: -> ^( FIELD_DECL type ID )
					{
						// Cymbol.g:30:19: ^( FIELD_DECL type ID )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FIELD_DECL, "FIELD_DECL"), root_1);
						adaptor.addChild(root_1, stream_type.nextTree());
						adaptor.addChild(root_1, stream_ID.nextNode());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;
					}

					}
					break;
				case 2 :
					// Cymbol.g:31:4: structDeclaration
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_structDeclaration_in_structMember217);
					structDeclaration13=structDeclaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, structDeclaration13.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "structMember"


	public static class methodDeclaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "methodDeclaration"
	// Cymbol.g:35:1: methodDeclaration : type ID '(' ( formalParameters )? ')' block -> ^( METHOD_DECL type ID ( formalParameters )? block ) ;
	public final CymbolParser.methodDeclaration_return methodDeclaration() throws RecognitionException {
		CymbolParser.methodDeclaration_return retval = new CymbolParser.methodDeclaration_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID15=null;
		Token char_literal16=null;
		Token char_literal18=null;
		ParserRuleReturnScope type14 =null;
		ParserRuleReturnScope formalParameters17 =null;
		ParserRuleReturnScope block19 =null;

		CommonTree ID15_tree=null;
		CommonTree char_literal16_tree=null;
		CommonTree char_literal18_tree=null;
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleTokenStream stream_17=new RewriteRuleTokenStream(adaptor,"token 17");
		RewriteRuleTokenStream stream_18=new RewriteRuleTokenStream(adaptor,"token 18");
		RewriteRuleSubtreeStream stream_formalParameters=new RewriteRuleSubtreeStream(adaptor,"rule formalParameters");
		RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			// Cymbol.g:36:5: ( type ID '(' ( formalParameters )? ')' block -> ^( METHOD_DECL type ID ( formalParameters )? block ) )
			// Cymbol.g:36:9: type ID '(' ( formalParameters )? ')' block
			{
			pushFollow(FOLLOW_type_in_methodDeclaration235);
			type14=type();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_type.add(type14.getTree());
			ID15=(Token)match(input,ID,FOLLOW_ID_in_methodDeclaration237); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ID.add(ID15);

			char_literal16=(Token)match(input,17,FOLLOW_17_in_methodDeclaration239); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_17.add(char_literal16);

			// Cymbol.g:36:21: ( formalParameters )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==ID||(LA4_0 >= 24 && LA4_0 <= 25)||LA4_0==28) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// Cymbol.g:36:21: formalParameters
					{
					pushFollow(FOLLOW_formalParameters_in_methodDeclaration241);
					formalParameters17=formalParameters();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_formalParameters.add(formalParameters17.getTree());
					}
					break;

			}

			char_literal18=(Token)match(input,18,FOLLOW_18_in_methodDeclaration244); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_18.add(char_literal18);

			pushFollow(FOLLOW_block_in_methodDeclaration246);
			block19=block();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_block.add(block19.getTree());
			// AST REWRITE
			// elements: block, ID, formalParameters, type
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 37:9: -> ^( METHOD_DECL type ID ( formalParameters )? block )
			{
				// Cymbol.g:37:12: ^( METHOD_DECL type ID ( formalParameters )? block )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(METHOD_DECL, "METHOD_DECL"), root_1);
				adaptor.addChild(root_1, stream_type.nextTree());
				adaptor.addChild(root_1, stream_ID.nextNode());
				// Cymbol.g:37:34: ( formalParameters )?
				if ( stream_formalParameters.hasNext() ) {
					adaptor.addChild(root_1, stream_formalParameters.nextTree());
				}
				stream_formalParameters.reset();

				adaptor.addChild(root_1, stream_block.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "methodDeclaration"


	public static class formalParameters_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "formalParameters"
	// Cymbol.g:41:1: formalParameters : type ID ( ',' type ID )* -> ( ^( ARG_DECL type ID ) )+ ;
	public final CymbolParser.formalParameters_return formalParameters() throws RecognitionException {
		CymbolParser.formalParameters_return retval = new CymbolParser.formalParameters_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID21=null;
		Token char_literal22=null;
		Token ID24=null;
		ParserRuleReturnScope type20 =null;
		ParserRuleReturnScope type23 =null;

		CommonTree ID21_tree=null;
		CommonTree char_literal22_tree=null;
		CommonTree ID24_tree=null;
		RewriteRuleTokenStream stream_20=new RewriteRuleTokenStream(adaptor,"token 20");
		RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
		RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");

		try {
			// Cymbol.g:42:5: ( type ID ( ',' type ID )* -> ( ^( ARG_DECL type ID ) )+ )
			// Cymbol.g:42:9: type ID ( ',' type ID )*
			{
			pushFollow(FOLLOW_type_in_formalParameters289);
			type20=type();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_type.add(type20.getTree());
			ID21=(Token)match(input,ID,FOLLOW_ID_in_formalParameters291); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_ID.add(ID21);

			// Cymbol.g:42:17: ( ',' type ID )*
			loop5:
			while (true) {
				int alt5=2;
				int LA5_0 = input.LA(1);
				if ( (LA5_0==20) ) {
					alt5=1;
				}

				switch (alt5) {
				case 1 :
					// Cymbol.g:42:18: ',' type ID
					{
					char_literal22=(Token)match(input,20,FOLLOW_20_in_formalParameters294); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_20.add(char_literal22);

					pushFollow(FOLLOW_type_in_formalParameters296);
					type23=type();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_type.add(type23.getTree());
					ID24=(Token)match(input,ID,FOLLOW_ID_in_formalParameters298); if (state.failed) return retval; 
					if ( state.backtracking==0 ) stream_ID.add(ID24);

					}
					break;

				default :
					break loop5;
				}
			}

			// AST REWRITE
			// elements: type, ID
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 42:32: -> ( ^( ARG_DECL type ID ) )+
			{
				if ( !(stream_type.hasNext()||stream_ID.hasNext()) ) {
					throw new RewriteEarlyExitException();
				}
				while ( stream_type.hasNext()||stream_ID.hasNext() ) {
					// Cymbol.g:42:35: ^( ARG_DECL type ID )
					{
					CommonTree root_1 = (CommonTree)adaptor.nil();
					root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ARG_DECL, "ARG_DECL"), root_1);
					adaptor.addChild(root_1, stream_type.nextTree());
					adaptor.addChild(root_1, stream_ID.nextNode());
					adaptor.addChild(root_0, root_1);
					}

				}
				stream_type.reset();
				stream_ID.reset();

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "formalParameters"


	public static class type_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "type"
	// Cymbol.g:45:1: type : ( 'float' | 'int' | 'void' | ID );
	public final CymbolParser.type_return type() throws RecognitionException {
		CymbolParser.type_return retval = new CymbolParser.type_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token set25=null;

		CommonTree set25_tree=null;

		try {
			// Cymbol.g:45:5: ( 'float' | 'int' | 'void' | ID )
			// Cymbol.g:
			{
			root_0 = (CommonTree)adaptor.nil();


			set25=input.LT(1);
			if ( input.LA(1)==ID||(input.LA(1) >= 24 && input.LA(1) <= 25)||input.LA(1)==28 ) {
				input.consume();
				if ( state.backtracking==0 ) adaptor.addChild(root_0, (CommonTree)adaptor.create(set25));
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type"


	public static class block_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "block"
	// Cymbol.g:52:1: block : '{' ( statement )* '}' -> ^( BLOCK ( statement )* ) ;
	public final CymbolParser.block_return block() throws RecognitionException {
		CymbolParser.block_return retval = new CymbolParser.block_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal26=null;
		Token char_literal28=null;
		ParserRuleReturnScope statement27 =null;

		CommonTree char_literal26_tree=null;
		CommonTree char_literal28_tree=null;
		RewriteRuleTokenStream stream_30=new RewriteRuleTokenStream(adaptor,"token 30");
		RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
		RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");

		try {
			// Cymbol.g:53:5: ( '{' ( statement )* '}' -> ^( BLOCK ( statement )* ) )
			// Cymbol.g:53:9: '{' ( statement )* '}'
			{
			char_literal26=(Token)match(input,29,FOLLOW_29_in_block372); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_29.add(char_literal26);

			// Cymbol.g:53:13: ( statement )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( ((LA6_0 >= ID && LA6_0 <= INT)||LA6_0==17||(LA6_0 >= 24 && LA6_0 <= 29)) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// Cymbol.g:53:13: statement
					{
					pushFollow(FOLLOW_statement_in_block374);
					statement27=statement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) stream_statement.add(statement27.getTree());
					}
					break;

				default :
					break loop6;
				}
			}

			char_literal28=(Token)match(input,30,FOLLOW_30_in_block377); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_30.add(char_literal28);

			// AST REWRITE
			// elements: statement
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 53:28: -> ^( BLOCK ( statement )* )
			{
				// Cymbol.g:53:31: ^( BLOCK ( statement )* )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BLOCK, "BLOCK"), root_1);
				// Cymbol.g:53:39: ( statement )*
				while ( stream_statement.hasNext() ) {
					adaptor.addChild(root_1, stream_statement.nextTree());
				}
				stream_statement.reset();

				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "block"


	public static class varDeclaration_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "varDeclaration"
	// Cymbol.g:58:1: varDeclaration : type ID ( '=' expression )? ';' -> ^( VAR_DECL type ID ( expression )? ) ;
	public final CymbolParser.varDeclaration_return varDeclaration() throws RecognitionException {
		CymbolParser.varDeclaration_return retval = new CymbolParser.varDeclaration_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token ID30=null;
		Token char_literal31=null;
		Token char_literal33=null;
		ParserRuleReturnScope type29 =null;
		ParserRuleReturnScope expression32 =null;
